// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateColors > clamps chroma for a near-gray accent 1`] = `
{
  "background": {
    "app": {
      "dark": "oklch(22.00% 0.005 0)",
      "light": "oklch(97.00% 0.002 0)",
    },
    "elevated": {
      "dark": "oklch(22.00% 0.005 0)",
      "light": "oklch(97.00% 0.002 0)",
    },
    "muted": {
      "dark": "oklch(30.33% 0.007 0)",
      "light": "oklch(88.67% 0.005 0)",
    },
    "popover": {
      "dark": "oklch(22.00% 0.005 0)",
      "light": "oklch(97.00% 0.002 0)",
    },
    "secondary": {
      "dark": "oklch(30.33% 0.007 0)",
      "light": "oklch(88.67% 0.005 0)",
    },
    "subtle": {
      "dark": "oklch(30.33% 0.007 0)",
      "light": "oklch(88.67% 0.005 0)",
    },
    "surface": {
      "dark": "oklch(22.00% 0.005 0)",
      "light": "oklch(97.00% 0.002 0)",
    },
    "tertiary": {
      "dark": "oklch(38.67% 0.01 0)",
      "light": "oklch(80.33% 0.009 0)",
    },
  },
  "border": {
    "default": {
      "dark": "oklch(47.00% 0.013 0)",
      "light": "oklch(72.00% 0.013 0)",
    },
    "focus": {
      "dark": "oklch(55.33% 0.08 0)",
      "light": "oklch(63.67% 0.08 0)",
    },
    "strong": {
      "dark": "oklch(55.33% 0.015 0)",
      "light": "oklch(63.67% 0.015 0)",
    },
    "subtle": {
      "dark": "oklch(30.33% 0.007 0)",
      "light": "oklch(88.67% 0.005 0)",
    },
  },
  "code": {
    "addition": {
      "dark": "var(--var-ui-color-palette-teal-4)",
      "light": "var(--var-ui-color-palette-teal-6)",
    },
    "additionBackground": {
      "dark": "var(--var-ui-color-palette-emerald-10)",
      "light": "var(--var-ui-color-palette-emerald-1)",
    },
    "attr": {
      "dark": "var(--var-ui-color-palette-amber-4)",
      "light": "var(--var-ui-color-palette-amber-6)",
    },
    "base": {
      "dark": "var(--var-ui-color-palette-gray-3)",
      "light": "var(--var-ui-color-palette-gray-10)",
    },
    "builtIn": {
      "dark": "var(--var-ui-color-palette-orange-4)",
      "light": "var(--var-ui-color-palette-orange-6)",
    },
    "bullet": {
      "dark": "var(--var-ui-color-palette-amber-5)",
      "light": "var(--var-ui-color-palette-amber-6)",
    },
    "comment": {
      "dark": "var(--var-ui-color-palette-gray-4)",
      "light": "var(--var-ui-color-palette-gray-5)",
    },
    "deletion": {
      "dark": "var(--var-ui-color-palette-red-4)",
      "light": "var(--var-ui-color-palette-red-6)",
    },
    "deletionBackground": {
      "dark": "var(--var-ui-color-palette-red-10)",
      "light": "var(--var-ui-color-palette-red-1)",
    },
    "keyword": {
      "dark": "var(--var-ui-color-palette-violet-4)",
      "light": "var(--var-ui-color-palette-purple-6)",
    },
    "name": {
      "dark": "var(--var-ui-color-palette-red-4)",
      "light": "var(--var-ui-color-palette-red-6)",
    },
    "section": {
      "dark": "var(--var-ui-color-palette-indigo-4)",
      "light": "var(--var-ui-color-palette-indigo-6)",
    },
    "string": {
      "dark": "var(--var-ui-color-palette-teal-4)",
      "light": "var(--var-ui-color-palette-teal-6)",
    },
    "title": {
      "dark": "var(--var-ui-color-palette-blue-4)",
      "light": "var(--var-ui-color-palette-blue-6)",
    },
  },
  "link": {
    "default": {
      "dark": "oklch(72.00% 0.069 0)",
      "light": "oklch(47.00% 0.072 0)",
    },
    "hover": {
      "dark": "oklch(80.33% 0.05 0)",
      "light": "oklch(38.67% 0.054 0)",
    },
  },
  "overlay": {
    "default": {
      "dark": "color-mix(in oklch, oklch(97.00% 0.002 0) 70%, transparent)",
      "light": "color-mix(in oklch, oklch(22.00% 0.005 0) 55%, transparent)",
    },
    "panel": {
      "dark": "oklch(22.00% 0.005 0)",
      "light": "oklch(97.00% 0.002 0)",
    },
  },
  "text": {
    "primary": {
      "dark": "oklch(97.00% 0.002 0)",
      "light": "oklch(22.00% 0.005 0)",
    },
    "secondary": {
      "dark": "oklch(72.00% 0.013 0)",
      "light": "oklch(47.00% 0.013 0)",
    },
  },
  "tone": {
    "accent": {
      "background": {
        "dark": "oklch(72.00% 0.069 0)",
        "light": "oklch(47.00% 0.072 0)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.069 0) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.072 0) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.069 0)",
        "light": "oklch(47.00% 0.072 0)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(22.00% 0.005 0)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.069 0) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.072 0) 12%, transparent)",
      },
    },
    "danger": {
      "background": {
        "dark": "oklch(47.00% 0.189 27)",
        "light": "oklch(38.67% 0.143 27)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.181 27) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.189 27) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.181 27)",
        "light": "oklch(47.00% 0.189 27)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(100% 0 0)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.181 27) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.189 27) 12%, transparent)",
      },
    },
    "info": {
      "background": {
        "dark": "oklch(72.00% 0.189 262)",
        "light": "oklch(47.00% 0.198 262)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.189 262) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.198 262) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.189 262)",
        "light": "oklch(47.00% 0.198 262)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(22.00% 0.005 0)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.189 262) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.198 262) 12%, transparent)",
      },
    },
    "success": {
      "background": {
        "dark": "oklch(47.00% 0.171 145)",
        "light": "oklch(38.67% 0.129 145)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.163 145) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.171 145) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.163 145)",
        "light": "oklch(47.00% 0.171 145)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(100% 0 0)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.163 145) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.171 145) 12%, transparent)",
      },
    },
    "warning": {
      "background": {
        "dark": "oklch(80.33% 0.105 72)",
        "light": "oklch(38.67% 0.116 72)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.146 72) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.153 72) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.146 72)",
        "light": "oklch(47.00% 0.153 72)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(22.00% 0.005 0)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.146 72) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.153 72) 12%, transparent)",
      },
    },
  },
}
`;

exports[`generateColors > returns mode-aware color leaves for the default accent 1`] = `
{
  "background": {
    "app": {
      "dark": "oklch(22.00% 0.005 258.81008101651366)",
      "light": "oklch(97.00% 0.002 258.81008101651366)",
    },
    "elevated": {
      "dark": "oklch(22.00% 0.005 258.81008101651366)",
      "light": "oklch(97.00% 0.002 258.81008101651366)",
    },
    "muted": {
      "dark": "oklch(30.33% 0.007 258.81008101651366)",
      "light": "oklch(88.67% 0.005 258.81008101651366)",
    },
    "popover": {
      "dark": "oklch(22.00% 0.005 258.81008101651366)",
      "light": "oklch(97.00% 0.002 258.81008101651366)",
    },
    "secondary": {
      "dark": "oklch(30.33% 0.007 258.81008101651366)",
      "light": "oklch(88.67% 0.005 258.81008101651366)",
    },
    "subtle": {
      "dark": "oklch(30.33% 0.007 258.81008101651366)",
      "light": "oklch(88.67% 0.005 258.81008101651366)",
    },
    "surface": {
      "dark": "oklch(22.00% 0.005 258.81008101651366)",
      "light": "oklch(97.00% 0.002 258.81008101651366)",
    },
    "tertiary": {
      "dark": "oklch(38.67% 0.01 258.81008101651366)",
      "light": "oklch(80.33% 0.009 258.81008101651366)",
    },
  },
  "border": {
    "default": {
      "dark": "oklch(47.00% 0.013 258.81008101651366)",
      "light": "oklch(72.00% 0.013 258.81008101651366)",
    },
    "focus": {
      "dark": "oklch(55.33% 0.205 258.81008101651366)",
      "light": "oklch(63.67% 0.205 258.81008101651366)",
    },
    "strong": {
      "dark": "oklch(55.33% 0.015 258.81008101651366)",
      "light": "oklch(63.67% 0.015 258.81008101651366)",
    },
    "subtle": {
      "dark": "oklch(30.33% 0.007 258.81008101651366)",
      "light": "oklch(88.67% 0.005 258.81008101651366)",
    },
  },
  "code": {
    "addition": {
      "dark": "var(--var-ui-color-palette-teal-4)",
      "light": "var(--var-ui-color-palette-teal-6)",
    },
    "additionBackground": {
      "dark": "var(--var-ui-color-palette-emerald-10)",
      "light": "var(--var-ui-color-palette-emerald-1)",
    },
    "attr": {
      "dark": "var(--var-ui-color-palette-amber-4)",
      "light": "var(--var-ui-color-palette-amber-6)",
    },
    "base": {
      "dark": "var(--var-ui-color-palette-gray-3)",
      "light": "var(--var-ui-color-palette-gray-10)",
    },
    "builtIn": {
      "dark": "var(--var-ui-color-palette-orange-4)",
      "light": "var(--var-ui-color-palette-orange-6)",
    },
    "bullet": {
      "dark": "var(--var-ui-color-palette-amber-5)",
      "light": "var(--var-ui-color-palette-amber-6)",
    },
    "comment": {
      "dark": "var(--var-ui-color-palette-gray-4)",
      "light": "var(--var-ui-color-palette-gray-5)",
    },
    "deletion": {
      "dark": "var(--var-ui-color-palette-red-4)",
      "light": "var(--var-ui-color-palette-red-6)",
    },
    "deletionBackground": {
      "dark": "var(--var-ui-color-palette-red-10)",
      "light": "var(--var-ui-color-palette-red-1)",
    },
    "keyword": {
      "dark": "var(--var-ui-color-palette-violet-4)",
      "light": "var(--var-ui-color-palette-purple-6)",
    },
    "name": {
      "dark": "var(--var-ui-color-palette-red-4)",
      "light": "var(--var-ui-color-palette-red-6)",
    },
    "section": {
      "dark": "var(--var-ui-color-palette-indigo-4)",
      "light": "var(--var-ui-color-palette-indigo-6)",
    },
    "string": {
      "dark": "var(--var-ui-color-palette-teal-4)",
      "light": "var(--var-ui-color-palette-teal-6)",
    },
    "title": {
      "dark": "var(--var-ui-color-palette-blue-4)",
      "light": "var(--var-ui-color-palette-blue-6)",
    },
  },
  "link": {
    "default": {
      "dark": "oklch(72.00% 0.176 258.81008101651366)",
      "light": "oklch(47.00% 0.184 258.81008101651366)",
    },
    "hover": {
      "dark": "oklch(80.33% 0.127 258.81008101651366)",
      "light": "oklch(38.67% 0.139 258.81008101651366)",
    },
  },
  "overlay": {
    "default": {
      "dark": "color-mix(in oklch, oklch(97.00% 0.002 258.81008101651366) 70%, transparent)",
      "light": "color-mix(in oklch, oklch(22.00% 0.005 258.81008101651366) 55%, transparent)",
    },
    "panel": {
      "dark": "oklch(22.00% 0.005 258.81008101651366)",
      "light": "oklch(97.00% 0.002 258.81008101651366)",
    },
  },
  "text": {
    "primary": {
      "dark": "oklch(97.00% 0.002 258.81008101651366)",
      "light": "oklch(22.00% 0.005 258.81008101651366)",
    },
    "secondary": {
      "dark": "oklch(72.00% 0.013 258.81008101651366)",
      "light": "oklch(47.00% 0.013 258.81008101651366)",
    },
  },
  "tone": {
    "accent": {
      "background": {
        "dark": "oklch(72.00% 0.176 258.81008101651366)",
        "light": "oklch(47.00% 0.184 258.81008101651366)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.176 258.81008101651366) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.184 258.81008101651366) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.176 258.81008101651366)",
        "light": "oklch(47.00% 0.184 258.81008101651366)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(22.00% 0.005 258.81008101651366)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.176 258.81008101651366) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.184 258.81008101651366) 12%, transparent)",
      },
    },
    "danger": {
      "background": {
        "dark": "oklch(47.00% 0.189 27)",
        "light": "oklch(38.67% 0.143 27)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.181 27) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.189 27) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.181 27)",
        "light": "oklch(47.00% 0.189 27)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(100% 0 0)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.181 27) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.189 27) 12%, transparent)",
      },
    },
    "info": {
      "background": {
        "dark": "oklch(72.00% 0.189 262)",
        "light": "oklch(47.00% 0.198 262)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.189 262) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.198 262) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.189 262)",
        "light": "oklch(47.00% 0.198 262)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(22.00% 0.005 258.81008101651366)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.189 262) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.198 262) 12%, transparent)",
      },
    },
    "success": {
      "background": {
        "dark": "oklch(47.00% 0.171 145)",
        "light": "oklch(38.67% 0.129 145)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.163 145) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.171 145) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.163 145)",
        "light": "oklch(47.00% 0.171 145)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(100% 0 0)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.163 145) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.171 145) 12%, transparent)",
      },
    },
    "warning": {
      "background": {
        "dark": "oklch(80.33% 0.105 72)",
        "light": "oklch(38.67% 0.116 72)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.146 72) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.153 72) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.146 72)",
        "light": "oklch(47.00% 0.153 72)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(22.00% 0.005 258.81008101651366)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.146 72) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.153 72) 12%, transparent)",
      },
    },
  },
}
`;

exports[`generateColors > returns themes for a saturated pink accent 1`] = `
{
  "background": {
    "app": {
      "dark": "oklch(22.00% 0.005 356.9447697294126)",
      "light": "oklch(97.00% 0.002 356.9447697294126)",
    },
    "elevated": {
      "dark": "oklch(22.00% 0.005 356.9447697294126)",
      "light": "oklch(97.00% 0.002 356.9447697294126)",
    },
    "muted": {
      "dark": "oklch(30.33% 0.007 356.9447697294126)",
      "light": "oklch(88.67% 0.005 356.9447697294126)",
    },
    "popover": {
      "dark": "oklch(22.00% 0.005 356.9447697294126)",
      "light": "oklch(97.00% 0.002 356.9447697294126)",
    },
    "secondary": {
      "dark": "oklch(30.33% 0.007 356.9447697294126)",
      "light": "oklch(88.67% 0.005 356.9447697294126)",
    },
    "subtle": {
      "dark": "oklch(30.33% 0.007 356.9447697294126)",
      "light": "oklch(88.67% 0.005 356.9447697294126)",
    },
    "surface": {
      "dark": "oklch(22.00% 0.005 356.9447697294126)",
      "light": "oklch(97.00% 0.002 356.9447697294126)",
    },
    "tertiary": {
      "dark": "oklch(38.67% 0.01 356.9447697294126)",
      "light": "oklch(80.33% 0.009 356.9447697294126)",
    },
  },
  "border": {
    "default": {
      "dark": "oklch(47.00% 0.013 356.9447697294126)",
      "light": "oklch(72.00% 0.013 356.9447697294126)",
    },
    "focus": {
      "dark": "oklch(55.33% 0.261 356.9447697294126)",
      "light": "oklch(63.67% 0.261 356.9447697294126)",
    },
    "strong": {
      "dark": "oklch(55.33% 0.015 356.9447697294126)",
      "light": "oklch(63.67% 0.015 356.9447697294126)",
    },
    "subtle": {
      "dark": "oklch(30.33% 0.007 356.9447697294126)",
      "light": "oklch(88.67% 0.005 356.9447697294126)",
    },
  },
  "code": {
    "addition": {
      "dark": "var(--var-ui-color-palette-teal-4)",
      "light": "var(--var-ui-color-palette-teal-6)",
    },
    "additionBackground": {
      "dark": "var(--var-ui-color-palette-emerald-10)",
      "light": "var(--var-ui-color-palette-emerald-1)",
    },
    "attr": {
      "dark": "var(--var-ui-color-palette-amber-4)",
      "light": "var(--var-ui-color-palette-amber-6)",
    },
    "base": {
      "dark": "var(--var-ui-color-palette-gray-3)",
      "light": "var(--var-ui-color-palette-gray-10)",
    },
    "builtIn": {
      "dark": "var(--var-ui-color-palette-orange-4)",
      "light": "var(--var-ui-color-palette-orange-6)",
    },
    "bullet": {
      "dark": "var(--var-ui-color-palette-amber-5)",
      "light": "var(--var-ui-color-palette-amber-6)",
    },
    "comment": {
      "dark": "var(--var-ui-color-palette-gray-4)",
      "light": "var(--var-ui-color-palette-gray-5)",
    },
    "deletion": {
      "dark": "var(--var-ui-color-palette-red-4)",
      "light": "var(--var-ui-color-palette-red-6)",
    },
    "deletionBackground": {
      "dark": "var(--var-ui-color-palette-red-10)",
      "light": "var(--var-ui-color-palette-red-1)",
    },
    "keyword": {
      "dark": "var(--var-ui-color-palette-violet-4)",
      "light": "var(--var-ui-color-palette-purple-6)",
    },
    "name": {
      "dark": "var(--var-ui-color-palette-red-4)",
      "light": "var(--var-ui-color-palette-red-6)",
    },
    "section": {
      "dark": "var(--var-ui-color-palette-indigo-4)",
      "light": "var(--var-ui-color-palette-indigo-6)",
    },
    "string": {
      "dark": "var(--var-ui-color-palette-teal-4)",
      "light": "var(--var-ui-color-palette-teal-6)",
    },
    "title": {
      "dark": "var(--var-ui-color-palette-blue-4)",
      "light": "var(--var-ui-color-palette-blue-6)",
    },
  },
  "link": {
    "default": {
      "dark": "oklch(72.00% 0.225 356.9447697294126)",
      "light": "oklch(47.00% 0.235 356.9447697294126)",
    },
    "hover": {
      "dark": "oklch(80.33% 0.162 356.9447697294126)",
      "light": "oklch(38.67% 0.178 356.9447697294126)",
    },
  },
  "overlay": {
    "default": {
      "dark": "color-mix(in oklch, oklch(97.00% 0.002 356.9447697294126) 70%, transparent)",
      "light": "color-mix(in oklch, oklch(22.00% 0.005 356.9447697294126) 55%, transparent)",
    },
    "panel": {
      "dark": "oklch(22.00% 0.005 356.9447697294126)",
      "light": "oklch(97.00% 0.002 356.9447697294126)",
    },
  },
  "text": {
    "primary": {
      "dark": "oklch(97.00% 0.002 356.9447697294126)",
      "light": "oklch(22.00% 0.005 356.9447697294126)",
    },
    "secondary": {
      "dark": "oklch(72.00% 0.013 356.9447697294126)",
      "light": "oklch(47.00% 0.013 356.9447697294126)",
    },
  },
  "tone": {
    "accent": {
      "background": {
        "dark": "oklch(72.00% 0.225 356.9447697294126)",
        "light": "oklch(47.00% 0.235 356.9447697294126)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.225 356.9447697294126) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.235 356.9447697294126) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.225 356.9447697294126)",
        "light": "oklch(47.00% 0.235 356.9447697294126)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(22.00% 0.005 356.9447697294126)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.225 356.9447697294126) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.235 356.9447697294126) 12%, transparent)",
      },
    },
    "danger": {
      "background": {
        "dark": "oklch(47.00% 0.189 27)",
        "light": "oklch(38.67% 0.143 27)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.181 27) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.189 27) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.181 27)",
        "light": "oklch(47.00% 0.189 27)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(100% 0 0)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.181 27) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.189 27) 12%, transparent)",
      },
    },
    "info": {
      "background": {
        "dark": "oklch(72.00% 0.189 262)",
        "light": "oklch(47.00% 0.198 262)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.189 262) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.198 262) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.189 262)",
        "light": "oklch(47.00% 0.198 262)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(22.00% 0.005 356.9447697294126)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.189 262) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.198 262) 12%, transparent)",
      },
    },
    "success": {
      "background": {
        "dark": "oklch(47.00% 0.171 145)",
        "light": "oklch(38.67% 0.129 145)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.163 145) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.171 145) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.163 145)",
        "light": "oklch(47.00% 0.171 145)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(100% 0 0)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.163 145) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.171 145) 12%, transparent)",
      },
    },
    "warning": {
      "background": {
        "dark": "oklch(80.33% 0.105 72)",
        "light": "oklch(38.67% 0.116 72)",
      },
      "border": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.146 72) 38%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.153 72) 38%, transparent)",
      },
      "foreground": {
        "dark": "oklch(72.00% 0.146 72)",
        "light": "oklch(47.00% 0.153 72)",
      },
      "foregroundOnBackground": {
        "dark": "oklch(22.00% 0.005 356.9447697294126)",
        "light": "oklch(100% 0 0)",
      },
      "subtleBackground": {
        "dark": "color-mix(in oklch, oklch(72.00% 0.146 72) 12%, transparent)",
        "light": "color-mix(in oklch, oklch(47.00% 0.153 72) 12%, transparent)",
      },
    },
  },
}
`;
